# mongodog

./: .gitignore  Cargo.toml  Makefile  README.md
examples/social-rs/: .gitignore
examples/social-rs/api-data-gen/: README.md  index.ts
examples/social-rs/frontend/: bun.lockb  package.json
examples/social-rs/frontend/pages/comment/: index.ts  page.tsx
examples/social-rs/frontend/pages/post/: page.tsx
examples/social-rs/frontend/pages/posts/: page.tsx
examples/social-rs/frontend/pages/test/: page.tsx
examples/social-rs/frontend/pages/user/: page.tsx
examples/social-rs/server/: .gitignore  Cargo.toml
examples/social-rs/server/src/: comment.rs  main.rs  post.rs  user.rs
examples/social-rs/server/tests/: integration_tests.rs
examples/websubmit-rs/: .env  Cargo.toml
examples/websubmit-rs/src/: admin.rs  main.rs  mongo_schema.rs  questions.rs
graph-viz/: Cargo.toml
graph-viz/graphs/: large-dataset-graph.json  large-graph.json  social-rs-graph.json
graph-viz/src/: main.rs
index-creator/: README.md  main.js
mongowner/: .gitignore  Cargo.toml
mongowner/mongowner-macros/: Cargo.toml
mongowner/mongowner-macros/src/: build.rs  lib.rs
mongowner/mongowner-macros/tests/: annotation_parser_test.rs
mongowner/original/: delete.rs
mongowner/src/: build.rs  delete.rs  delete_original.rs  hello_world.txt  lib.rs  util.rs
mongowner/tests/: common.rs  mongowner_macros_test.rs  safe_delete_test.rs  test_schemas.rs
social-rs/api-data-gen/: bun.lockb  index.ts  package.json
social-rs/api-scripts/: createDummyData.js  createDummyData.tsx  package-lock.json  package.json
social-rs/frontend/: package-lock.json  package.json
social-rs/server/: .gitignore  Cargo.toml
social-rs/server/data/: graph.json  index_map.json
social-rs/server/src/: comment.rs  main.rs  post.rs  user.rs
