[package]
name = "graph-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.4", features = ["serde-1", "graphmap"] }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
