[package]
name = "mongowner"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
syn = "1.0"
quote = "1.0"


[dependencies]
mongowner-macros = { path = "./mongowner-macros/" }
mongodb = { version = "2.7.1" }
petgraph = { version = "0.6.4", features = ["serde-1", "graphmap"] }
serde_json = "1.0.108"
serde = "1.0.192"
