[package]
name = "mongowner"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"


[dependencies]
mongowner-macros = { path = "./mongowner-macros/" }
mongodb = { version = "2.7.1" }
petgraph = { version = "0.6.4", features = ["serde-1", "graphmap"] }
serde_json = "1.0.108"
serde = "1.0.192"
futures = "0.3.29"
async-recursion = "1.0.5"
tokio = { version = "1", features = ["full"] }
rand = { version = "0.8" }
