[package]
name = "mongowner-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
mongodb = "2.7"
proc-macro2 = "1.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde_json = "1.0.108"

[lib]
proc_macro = true
