[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongowner = { path = "../../mongowner" }
mongowner-macros = { path = "../../mongowner/mongowner-macros/" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4"
dotenv = "0.15.0"
uuid = "1.5.0"
futures = "0.3.29"
petgraph = { version = "0.6.4", features = ["serde-1", "graphmap"] }
serde_json = "1.0.108"
